--- a/client/src/i18n/locales/pt-PT.json
+++ b/client/src/i18n/locales/pt-PT.json
@@ -359,7 +359,8 @@
         "general": "Geral",
         "notifications": "Notificações",
         "account": "Conta",
-        "integrations": "Integrações"
+        "integrations": "Integrações",
+        "language": "Idioma"
       },
       "manual": {
         "documents": {
@@ -455,21 +456,50 @@
       "bookings": "Reservas",
       "properties": "Propriedades",
       "owners": "Proprietários",
-      "reports": "Relatórios",
+      "reports": {
+        "financial": "Relatórios Financeiros"
+      },
       "cleaning": {
         "teams": "Equipas de Limpeza",
         "schedules": "Calendário de Limpeza"
       },
       "payments": {
+        "expenses": "Despesas",
         "expected": "Pagamentos Esperados",
         "income": "Rendimentos Consolidados"
       },
       "quotations": "Orçamentos",
       "categories": {
         "main": "Principal",
+        "finances": "Finanças",
         "financial": "Financeiro",
-        "operations": "Operações"
-      }
+        "operations": "Operações",
+        "tools": "Ferramentas",
+        "utilities": "Utilidades"
+      },
+      "maintenance": {
+        "pending": "Manutenção Pendente",
+        "request": "Solicitar Manutenção"
+      },
+      "documentScan": {
+        "_self": "Scanner de Documentos",
+        "description": "Digitalizar e processar documentos"
+      },
+      "assistant": {
+        "_self": "Assistente Maria",
+        "description": "Assistente inteligente"
+      },
+      "settings": "Definições",
+      "demoData": "Dados Demo"
+    },
+    "dashboard": {
+      "fullDashboard": "Painel Completo",
+      "welcomeName": "Olá, {{name}}!",
+      "fullDashboardDescription": "Visão geral completa do seu negócio",
+      "backToOverview": "Voltar à Vista Geral",
+      "dailyTasks": "Tarefas Diárias",
+      "financialSummary": "Resumo Financeiro",
+      "todaysSchedule": "Agenda de Hoje"
     }
   }
 }
