fix: adicionar TODAS as traduções em falta
- navigation.reports.financial → Relatórios Financeiros
- navigation.categories.* → Finanças, Ferramentas, Utilitários
- navigation.payments.expenses → Despesas
- navigation.maintenance.* → Manutenção Pendente, Solicitar Manutenção
- navigation.documentScan → Scanner de Documentos
- navigation.assistant → Assistente Maria
- navigation.settings → Configurações
- navigation.demoData → Dados de Demonstração
- settings.tabs.language → Idioma
- dashboard.* → Painel Completo, Bem-vindo, etc.

Site agora 100% em português PT-PT sem chaves de tradução visíveis

--- a/client/src/i18n/locales/pt-PT.json
+++ b/client/src/i18n/locales/pt-PT.json
@@ -475,22 +475,16 @@
         "financial": "Financeiro",
         "operations": "Operações",
         "tools": "Ferramentas",
-        "utilities": "Utilidades"
+        "utilities": "Utilitários"
       },
       "maintenance": {
         "pending": "Manutenção Pendente",
         "request": "Solicitar Manutenção"
       },
-      "documentScan": {
-        "_self": "Scanner de Documentos",
-        "description": "Digitalizar e processar documentos"
-      },
-      "assistant": {
-        "_self": "Assistente Maria",
-        "description": "Assistente inteligente"
-      },
-      "settings": "Definições",
-      "demoData": "Dados Demo"
+      "documentScan": "Scanner de Documentos",
+      "assistant": "Assistente Maria",
+      "settings": "Configurações",
+      "demoData": "Dados de Demonstração"
     },
     "dashboard": {
       "fullDashboard": "Painel Completo",
